tests/ui/fail/incorrect_item/enum.stderr
error: `#[derive(Merge)]` only works on structs, not enums
 --> tests/ui/fail/incorrect_item/enum.rs:4:1
  |
4 | / #[partial(PartialChoice)]
5 | | enum Choice {
6 | |     A,
7 | |     B,
8 | | }
  | |_^
